fixed images on mobile screens

--- a/style.css
+++ b/style.css
@@ -91,10 +91,6 @@ p{
     padding-left: 5rem !important;
 }
 
-.sheep-image{
-    max-width: 75%;
-}
-
 .contact-link{
     color: #4b4a4a;
     text-decoration: none;
